@@ -1,5 +1,9 @@
 Changes since version 3.1.0
 ---------------------------
+
+- For object adapters without endpoints, Ice.Trace.Network >= 2 now
+  prints a trace message.
+
 - Unix/Linux: New Make.rules variable: embedded_runpath_prefix. 
   Defaults to /opt/Ice-3.1 in Ice 3.1.1.
   This variable allows you to define the root directory for embedded
